@@ -455,7 +455,7 @@ display image using this type.</abs>
 </utils>
 <utils apps=convert>
 <lopt>-process <command></opt>
-<abs>process a sequence of images</abs>
+<abs>process a sequence of images using a process module</abs>
 </utils>
 <utils apps=composite,convert,mogrify>
 <lopt>-profile <filename></opt>
