@@ -1,12 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=ibm437">
+	<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=iso-8859-1">
 	<TITLE>GraphicsMagick Image Processing System</TITLE>
-	<META NAME="GENERATOR" CONTENT="StarOffice 6.0  (Solaris Sparc)">
+	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;11000900">
-	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20030925;15273100">
+	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
+	<META NAME="CHANGED" CONTENT="20031205;18035900">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate, sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
@@ -19,7 +19,7 @@
 	-->
 	</STYLE>
 </HEAD>
-<BODY LANG="en-US" TEXT="#000000" LINK="#0085c0" VLINK="#800080" BGCOLOR="#ffffff">
+<BODY LANG="en-US" TEXT="#000000" LINK="#0085c0" VLINK="#800080" BGCOLOR="#ffffff" DIR="LTR">
 <FORM ACTION="http://www.google.com/search">
 	<INPUT TYPE=HIDDEN NAME="domains" VALUE="www.graphicsmagick.org">
 	<INPUT TYPE=HIDDEN NAME="sitesearch" VALUE="www.graphicsmagick.org">
@@ -28,7 +28,7 @@
 		<COL WIDTH=48*>
 		<TR>
 			<TD WIDTH=81%>
-				<P ALIGN=LEFT>[<A HREF="">Home</A>] [<A HREF="www/mission.html">Mission
+				<P ALIGN=LEFT>[<A HREF="../GraphicsMagick">Home</A>] [<A HREF="www/mission.html">Mission
 				Statement</A>] [<A HREF="www/development.html">Development
 				Process</A>] [<A HREF="www/contribute.html">Contribute</A>]
 				[<A HREF="www/download.html">Download</A>] [<A HREF="www/install.html">Installation</A>]
@@ -55,8 +55,32 @@
 		</TR>
 	</TABLE>
 </FORM>
-<P><FONT SIZE=3><I><SPAN STYLE="background: #ffff00">News flash:
-GraphicsMagick 1.0.3 is now released!</SPAN></I></FONT></P>
+<TABLE WIDTH=506 BORDER=0 CELLPADDING=0 CELLSPACING=0>
+	<COL WIDTH=170>
+	<COL WIDTH=336>
+	<TR VALIGN=TOP>
+		<TD WIDTH=170>
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Latest
+			Release:</SPAN></I></FONT></P>
+		</TD>
+		<TD WIDTH=336>
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent"><A HREF="http://sourceforge.net/project/showfiles.php?group_id=73485">1.0.3</A></SPAN></I></FONT></P>
+		</TD>
+	</TR>
+	<TR VALIGN=TOP>
+		<TD WIDTH=170>
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Next
+			Major Release: </SPAN></I></FONT>
+			</P>
+		</TD>
+		<TD WIDTH=336>
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">1.1
+			(<A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/snapshots">currently
+			in development snapshots</A>)</SPAN></I></FONT></P>
+		</TD>
+	</TR>
+</TABLE>
+<HR>
 <P><FONT SIZE=3><I>GraphicsMagick</I> 1.0.3 is a robust collection of
 tools and libraries which support reading, writing, and manipulating
 an image in over 88 major formats including popular formats like
@@ -71,15 +95,16 @@ Windows COM programming interfaces. Extensions are available from
 third-parties to support <A HREF="www/programming.html">programming</A>
 in Borland's Delphi, Java, PHP, Python, Scheme, and Ruby.</FONT></P>
 <P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Gr</SPAN>aphicsMagick</I>
-is </FONT><A HREF="www/Copyright.html"><FONT SIZE=3>copyrighted</FONT></A><FONT SIZE=3>
-by the GraphicsMagick Group. GraphicsMagick is originally derived
-from <A HREF="http://www.imagemagick.org/">ImageMagick</A> 5.5.2, and
-has enjoyed many improvements (<A HREF="www/NEWS.html">see  news</A>)
-by <A HREF="www/AUTHORS.html">many authors</A>.  <I>GraphicsMagick</I>
-is available for free, may be used to support both open and
-proprietary applications, and may be redistributed without fee.</FONT></P>
-<P><FONT SIZE=3>Here are just a few </FONT><A HREF="images/examples.jpg"><FONT SIZE=3>examples</FONT></A><FONT SIZE=3>
-of what <I>GraphicsMagick</I> can do:</FONT></P>
+is </FONT><A HREF="www/Copyright.html"><FONT SIZE=3>copyrighted</FONT></A>
+<FONT SIZE=3>by the GraphicsMagick Group. GraphicsMagick is
+originally derived from <A HREF="http://www.imagemagick.org/">ImageMagick</A>
+5.5.2, and has enjoyed many improvements (<A HREF="www/NEWS.html">see
+news</A>) by <A HREF="www/AUTHORS.html">many authors</A>.
+<I>GraphicsMagick</I> is available for free, may be used to support
+both open and proprietary applications, and may be redistributed
+without fee.</FONT></P>
+<P><FONT SIZE=3>Here are just a few </FONT><A HREF="images/examples.jpg"><FONT SIZE=3>examples</FONT></A>
+<FONT SIZE=3>of what <I>GraphicsMagick</I> can do:</FONT></P>
 <DL>
 	<DD>
 	<TABLE WIDTH=96% BORDER=0 CELLPADDING=0 CELLSPACING=0>
@@ -180,9 +205,9 @@ of what <I>GraphicsMagick</I> can do:</FONT></P>
 under almost every general purpose operating system that runs on
 32-bit or 64-bit CPUs. <I>GraphicsMagick</I> is available for
 virtually any Unix or Unix-like system, including Linux. It also runs
-under </FONT><A HREF="www/windows.html"><FONT SIZE=3>Windows</FONT></A><FONT SIZE=3>
-'98 and later ('98, ME, NT 4.0, 2000, and XP), Macintosh (MacOS 9 and
-10), VMS, and OS/2.</FONT></P>
+under </FONT><A HREF="www/windows.html"><FONT SIZE=3>Windows</FONT></A>
+<FONT SIZE=3>'98 and later ('98, ME, NT 4.0, 2000, and XP), Macintosh
+(MacOS 9 and 10), VMS, and OS/2.</FONT></P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=2>
 	<TR>
 		<TD BGCOLOR="#52799e">
