@@ -53,6 +53,14 @@
 </tr>
 </table>
 <p>
+2003-12-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> acinclude.m4 (AC_CHECK_CC_OPT): Add quoting in AC_CHECK_CC_OPT
+        definition.  Change suggested by Patrick Welche
+
+</UL>
+<p>
 2003-12-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
